<resources>
    <string name="app_name">Connection Test</string>

    <string name="ping_btn_text">test connections</string>

    <string name="default_address" translatable="false">172.217.18.14</string>

    <string name="label_ping">Ping:</string>
    <string name="label_http">Http:</string>

    <string name="checking">Checking</string>
    <string name="negative_result">Failure</string>
    <string name="positive_result">Success</string>

    <string name="encoder_test_title">Encoder Status:</string>
    <string name="network_test_title">Network Status:</string>
    <string name="proxy_test_title">Proxy Status:</string>

    <string name="encoder_test_target" translatable="false">ynet.co.il</string>
    <string name="network_test_target" translatable="false">google.com</string>
    <string name="proxy_test_target" translatable="false">cnn.com</string>

    <string name="encoder_test_target_ip" translatable="false">23.63.89.103</string>
    <string name="simple_test_target_ip" translatable="false">172.217.18.14</string>
    <string name="proxy_test_target_ip" translatable="false">151.101.65.67</string>

</resources>
